Certbot to manage certificates (#212)
* certbot beta

* cert-name set as satosa

* separata la logica di nginx da certbot

* mounted path with archived certificates (live directory contain only synbolic link)

* localhost certificate

--- a/Docker-compose/docker-compose.yml
+++ b/Docker-compose/docker-compose.yml
@@ -143,13 +143,17 @@ services:
     image: nginx:alpine
     container_name: satosa-nginx
     depends_on:
-      - iam-proxy-italia
+      iam-proxy-italia:
+        condition: service_started
+      satosa-certbot:
+        condition: service_completed_successfully
     ports:
       - "443:443"
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
       - ./nginx/html:/usr/share/nginx/html:ro
-      - ./nginx/certs:/etc/nginx/certs:ro
+      - ./certbot/archive:/etc/archive:ro
+      - ./certbot/live/${SATOSA_HOSTNAME:-localhost}:/etc/nginx/certs:ro
       # - static:/usr/share/nginx/html # to be used for external volumes
     networks:
       - iam-proxy-italia
@@ -167,6 +171,23 @@ services:
       - "8443:8443"
     networks:
       - iam-proxy-italia
+  satosa-certbot:
+    image: certbot/certbot
+    container_name: satosa-certbot 
+    environment:
+      - CERTBOT_ENABLED=${SATOSA_CERTBOT_ENABLED:-true}
+      - CERTBOT_EMAIL=${SATOSA_CONTACT_PERSON_EMAIL_ADDRESS:-support.example@organization.org}
+      - CERTBOT_HOST=${SATOSA_HOSTNAME:-localhost}
+      - TZ=${TZ:-Europe/Rome}
+    volumes:
+      - ./certbot:/etc/letsencrypt
+      - ./nginx/html:/var/www/certbot
+    networks:
+      - iam-proxy-italia
+    ports:
+      - "80:80"
+    entrypoint: "sh /etc/letsencrypt/certbot.sh"
+
 networks:
   iam-proxy-italia:
     name: iam-proxy-italia
