[gitignore] ignore .run folder

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ Docker-compose/.env
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 *.iml
+.run/
