--- a/Docker-compose/nginx/conf.d/default.conf
+++ b/Docker-compose/nginx/conf.d/default.conf
@@ -41,6 +41,11 @@ server {
       uwsgi_param SERVER_ADDR $server_addr;
     }
 
+    location /static/ {
+        alias /usr/share/nginx/html/static/;
+        autoindex on;
+    }
+
     error_page 404 /404.html;
     location = /404.html {
         root   /usr/share/nginx/html/errors;
