--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,17 +22,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Install xmlsec1
         run: sudo apt-get install -y xmlsec1
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install Python dependencies
         run: |
           pip install --upgrade pip
           pip install flake8
           pip install "spid-sp-test>=1.2.17"
+
       - name: Inspect Python dependencies
         run: |
           pip list
@@ -43,35 +47,51 @@ jobs:
           ## exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 --max-line-length 120 --count --exit-zero --statistics iam-proxy-italia-project
 
-      - name: Patch pyproject.toml if same branch exists in eudi-wallet-it-python
+      - name: Patch pyproject.toml if matching branch exists in eudi-wallet-it-python
         env:
           CURRENT_BRANCH: ${{ github.head_ref || github.ref_name }}
         run: |
           echo "Current branch: $CURRENT_BRANCH"
-          if [ "$CURRENT_BRANCH" != "master" ]; then
-            echo "Checking if branch '$CURRENT_BRANCH' exists in eudi-wallet-it-python..."
-            if git ls-remote --heads https://github.com/italia/eudi-wallet-it-python.git $CURRENT_BRANCH | grep -q $CURRENT_BRANCH; then
-              echo "Branch found! Patching pyproject.toml..."
-              # PEP 508 style
-              sed -i 's|git+https://github.com/italia/eudi-wallet-it-python|git+https://github.com/italia/eudi-wallet-it-python.git@'"$CURRENT_BRANCH"'|g' pyproject.toml
-              # Table style
-              sed -i 's|git = "https://github.com/italia/eudi-wallet-it-python"|git = "https://github.com/italia/eudi-wallet-it-python.git", rev = "'"$CURRENT_BRANCH"'"|g' pyproject.toml
-              rm -f poetry.lock
-            else
+          if [ "$CURRENT_BRANCH" = "master" ]; then
+            echo "Current branch is master → no patch needed."
+          else
+            # Determine candidate branches
+            BRANCH_CANDIDATES=("$CURRENT_BRANCH")
+            if [ "${GITHUB_BASE_REF}" != "" ]; then
+              BRANCH_CANDIDATES+=("$GITHUB_BASE_REF")
+            fi
+            
+            # Always include master as fallback
+            BRANCH_CANDIDATES+=("master")
+            
+            PATCHED=false
+            for BRANCH in "${BRANCH_CANDIDATES[@]}"; do
+              echo "Checking if branch '$BRANCH' exists in eudi-wallet-it-python..."
+              if git ls-remote --heads https://github.com/italia/eudi-wallet-it-python.git "$BRANCH" | grep -q "$BRANCH"; then
+                echo "Branch '$BRANCH' found! Patching pyproject.toml..."
+                # PEP 508 style
+                sed -i 's|git+https://github.com/italia/eudi-wallet-it-python|git+https://github.com/italia/eudi-wallet-it-python.git@'"$BRANCH"'|g' pyproject.toml
+                # Table style
+                sed -i 's|git = "https://github.com/italia/eudi-wallet-it-python"|git = "https://github.com/italia/eudi-wallet-it-python.git", rev = "'"$BRANCH"'"|g' pyproject.toml
+                rm -f poetry.lock
+                PATCHED=true
+                break
+              fi
+            done
+            if [ "$PATCHED" = false ]; then
               echo "No matching branch found. Using default pyproject.toml."
             fi
-          else
-            echo "Current branch is master → no patch needed."
           fi
-
       - name: docker compose
         run: |
           cd Docker-compose
           ./run-docker-compose.sh
           docker ps -a
+
       - name: djangosaml2 SP metadata to Proxy
         run: |
           wget http://localhost:8000/saml2/metadata -O Docker-compose/iam-proxy-italia-project/metadata/sp/djangosaml2_sp.xml
+
       - name: Inspect djangosaml2 SP metadata
         run: |
           cat Docker-compose/iam-proxy-italia-project/metadata/sp/djangosaml2_sp.xml
@@ -79,9 +99,11 @@ jobs:
         run: |
           docker container inspect iam-proxy-italia
           docker container logs iam-proxy-italia
+
       - name: Copy Satosa IDP Metadata to djangosaml2 SP
         run: |
           wget -vd --no-check-certificate https://localhost/Saml2IDP/metadata -O Docker-compose/djangosaml2_sp/saml2_sp/saml2_config/iam-proxy-italia.xml
+
       - name: Inspect Satosa IDP Metadata
         run: |
           cat Docker-compose/djangosaml2_sp/saml2_sp/saml2_config/iam-proxy-italia.xml
@@ -90,10 +112,12 @@ jobs:
           cd Docker-compose/iam-proxy-italia-project
           spid_sp_test --idp-metadata > metadata/idp/spid-sp-test.xml
           spid_sp_test --metadata-url https://localhost/spidSaml2/metadata --authn-url "http://localhost:8000/saml2/login/?idp=https://localhost/Saml2IDP/metadata&next=/saml2/echo_attributes&idphint=https%253A%252F%252Flocalhost%253A8443" -ap spid_sp_test.plugins.authn_request.SatosaSaml2Spid --extra --debug ERROR -tr
+
       - name: spid-sp-test CIE id metadata
         run: |
           cd Docker-compose/iam-proxy-italia-project
           spid_sp_test --profile cie-sp-public --metadata-url https://localhost/cieSaml2/metadata
+
       - name: spid-sp-test eIDAS FiCEP metadata
         run: |
           cd Docker-compose/iam-proxy-italia-project
