--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,20 +50,22 @@ jobs:
       - name: Patch pyproject.toml if matching branch exists in eudi-wallet-it-python
         env:
           CURRENT_BRANCH: ${{ github.head_ref || github.ref_name }}
+          TARGET_BRANCH: ${{ github.base_ref || 'master' }}
         run: |
-          echo "Current branch: $CURRENT_BRANCH"
+          echo "Current branch: '$CURRENT_BRANCH'"
+          echo "Target branch: '$TARGET_BRANCH'"
+      
           if [ "$CURRENT_BRANCH" = "master" ]; then
             echo "Current branch is master → no patch needed."
           else
-            # Determine candidate branches
-            BRANCH_CANDIDATES=("$CURRENT_BRANCH")
-            if [ "${GITHUB_BASE_REF}" != "" ]; then
-              BRANCH_CANDIDATES+=("$GITHUB_BASE_REF")
-            fi
-            
-            # Always include master as fallback
+            # Determine candidate branches as current branch, pr target branch and master as default
+            BRANCH_CANDIDATES=()
+            [ -n "$CURRENT_BRANCH" ] && BRANCH_CANDIDATES+=("$CURRENT_BRANCH")
+            [ -n "$TARGET_BRANCH" ] && [[ "$TARGET_BRANCH" != "$CURRENT_BRANCH" ]] && BRANCH_CANDIDATES+=("$TARGET_BRANCH")
             BRANCH_CANDIDATES+=("master")
-            
+      
+            echo "Branch candidates for check build: ${BRANCH_CANDIDATES[*]}"
+      
             PATCHED=false
             for BRANCH in "${BRANCH_CANDIDATES[@]}"; do
               echo "Checking if branch '$BRANCH' exists in eudi-wallet-it-python..."
@@ -76,12 +78,16 @@ jobs:
                 rm -f poetry.lock
                 PATCHED=true
                 break
+              else
+                echo "Branch '$BRANCH' does not exist → trying next candidate."
               fi
             done
+      
             if [ "$PATCHED" = false ]; then
               echo "No matching branch found. Using default pyproject.toml."
             fi
           fi
+
       - name: docker compose
         run: |
           cd Docker-compose
