--- a/Docker-compose/docker-compose.yml
+++ b/Docker-compose/docker-compose.yml
@@ -129,7 +129,7 @@ services:
       # - /eudi-wallet-it-python/pyeudiw:/.venv/lib/python3.12/site-packages/pyeudiw:rwx
       # - iam-proxy-italia-data:/satosa_proxy # to be used for external volumes
     working_dir: /satosa_proxy
-    entrypoint: "sh entrypoint.sh"
+    entrypoint: ["/bin/bash", "entrypoint.sh"]
     networks:
       - iam-proxy-italia
     healthcheck:
