feat: added conf file

--- a/Docker-compose/nginx/conf.d/default.conf
+++ b/Docker-compose/nginx/conf.d/default.conf
@@ -41,36 +41,7 @@ server {
       uwsgi_param SERVER_ADDR $server_addr;
     }
 
-    location /wwwallet-frontend/ {
-        rewrite ^/wwwallet-frontend/(.*)$ /$1 break;
-        alias /wwwallet-frontend/;
-
-        proxy_pass http://wwwallet-frontend:80/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Ssl on; # Optional
-        proxy_set_header X-Forwarded-Port $server_port;
-    }
-
-
-    location /wwwallet-server/ {
-        rewrite ^/wwwallet-server/(.*)$ /$1 break;
-        alias /wwwallet-server/;
-
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-
-        proxy_pass http://wwwallet-server:8002/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Ssl on; # Optional
-        proxy_set_header X-Forwarded-Port $server_port;
-    }
+    include ./conf.d/sites-enabled/*.conf;
 
     error_page 404 /404.html;
     location = /404.html {
