--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = {text = "Apache 2.0"}
 readme = "README.md"
 requires-python = ">=3.12,<4.0"
 dependencies = [
-    "pysaml2 @ git+https://github.com/peppelinux/pysaml2.git@pplnx-v7.5.2",
+    "pysaml2 @ git+https://github.com/saralongobardiacn/pysaml2@feat/upg-python",
     "satosa @ git+https://github.com/peppelinux/SATOSA.git@pplnx-8.5.1",
     "pymongo (>=4.10.1,<5.0.0)",
     "satosa-oidcop (>=2.0.0)",
