--- a/iam-proxy-italia-project/wwwallet/configs/.env.prod
+++ b/iam-proxy-italia-project/wwwallet/configs/.env.prod
@@ -1,7 +1,7 @@
 HOST='0.0.0.0'
 PORT=3000
-VITE_WS_URL=ws://localhost/wwwallet-server/
-VITE_WALLET_BACKEND_URL=https://localhost/wwwallet-server/
+VITE_WS_URL=ws://${SATOSA_HOSTNAME}/wwwallet-server/
+VITE_WALLET_BACKEND_URL=https://${SATOSA_HOSTNAME}/wwwallet-server/
 VITE_LOGIN_WITH_PASSWORD=true
 VITE_FIREBASE_ENABLED=false
 VITE_FIREBASE_VAPIDKEY=<Your_Vapid_Key>
@@ -16,8 +16,8 @@ VITE_DID_KEY_VERSION=jwk_jcs-pub
 VITE_APP_VERSION=$npm_package_version
 VITE_GENERATE_SOURCEMAP=false
 VITE_DISPLAY_CONSOLE=true
-VITE_WEBAUTHN_RPID=localhost
-VITE_OPENID4VCI_REDIRECT_URI=http://localhost:3000/
+VITE_WEBAUTHN_RPID=${SATOSA_HOSTNAME}
+VITE_OPENID4VCI_REDIRECT_URI=http://${SATOSA_HOSTNAME}/wallet-frontend
 VITE_OPENID4VCI_PROOF_TYPE_PRECEDENCE="attestation,jwt"
 VITE_OPENID4VP_SAN_DNS_CHECK=false
 VITE_OPENID4VP_SAN_DNS_CHECK_SSL_CERTS=false
