--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install flake8
-          pip install git+https://github.com/saralongobardiacn/spid-sp-test@feat/upg-python
+          pip install spid-sp-test
 
       - name: Inspect Python dependencies
         run: |
