--- a/iam-proxy-italia-project/wwwallet/configs/.env.prod
+++ b/iam-proxy-italia-project/wwwallet/configs/.env.prod
@@ -1,6 +1,6 @@
 HOST='0.0.0.0'
 PORT=3000
-VITE_WS_URL=ws://${SATOSA_HOSTNAME}/wwwallet-server/
+VITE_WS_URL=wss://${SATOSA_HOSTNAME}/wwwallet-server/
 VITE_WALLET_BACKEND_URL=https://${SATOSA_HOSTNAME}/wwwallet-server/
 VITE_LOGIN_WITH_PASSWORD=true
 VITE_FIREBASE_ENABLED=false
