--- a/Docker-compose/docker-compose.yml
+++ b/Docker-compose/docker-compose.yml
@@ -106,7 +106,7 @@ services:
     working_dir: /django_sp
     entrypoint: "sh ../entrypoint.sh"
     volumes:
-       - ./djangosaml2_sp:/django_sp:rw
+      - ./djangosaml2_sp:/django_sp:rw
     ports:
       - "8000:8000"
     networks:
@@ -115,11 +115,11 @@ services:
   iam-proxy-italia:
     # image: ghcr.io/italia/iam-proxy-italia:latest
     image: iam-proxy-italia:3.0
-    build: 
-        context: ../      
-        args: 
-            - NODE_ENV=local        
-        dockerfile: Dockerfile
+    build:
+      context: ../
+      args:
+        - NODE_ENV=local
+      dockerfile: Dockerfile
     container_name: iam-proxy-italia
     # depends_on:
     # - satosa-mongo
@@ -141,7 +141,7 @@ services:
       - SATOSA_BASE_STATIC=${SATOSA_BASE}/static
       - SATOSA_DISCO_SRV=${SATOSA_BASE_STATIC}/disco.html
       - SATOSA_UNKNOW_ERROR_REDIRECT_PAGE=${SATOSA_BASE_STATIC}/error_page.html
-      
+
       - MONGODB_USERNAME=${MONGO_DBUSER:-satosa}
       - MONGODB_PASSWORD=${MONGO_DBPASSWORD:-thatpassword}
       - SATOSA_ENCRYPTION_KEY=${SATOSA_ENCRYPTION_KEY:-CHANGE_ME!}
@@ -208,7 +208,7 @@ services:
     ports:
       - "443:443"
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
       - ./nginx/html:/usr/share/nginx/html:ro
       - ./certbot/archive:/etc/archive:ro
       - ./certbot/live/${SATOSA_HOSTNAME:-localhost}:/etc/nginx/certs:ro
@@ -232,7 +232,7 @@ services:
       - iam-proxy-italia
   satosa-certbot:
     image: certbot/certbot
-    container_name: satosa-certbot 
+    container_name: satosa-certbot
     environment:
       - CERTBOT_ENABLED=${SATOSA_CERTBOT_ENABLED:-true}
       - CERTBOT_EMAIL=${SATOSA_CONTACT_PERSON_EMAIL_ADDRESS:-support.example@organization.org}
