Docker compose Healthchecks improvements (#238)
* fix: iam-proxy-italia healthcheck, set timeout to 10s

* rev: gitguardian, add escape for ENV variables in yaml

* feat: iam-proxy-italia healthcheck, improve with OpenID4VP and OpenID4VCI metadata endpoint

* feat: iam-proxy-italia healthcheck, manage script with proxy_conf.yaml
(view: 238#discussion_r2394506144)

* rev: gitguardian, remove escape private keys that shouldn't be committed

--- a/Docker-compose/docker-compose.yml
+++ b/Docker-compose/docker-compose.yml
@@ -133,11 +133,11 @@ services:
     networks:
       - iam-proxy-italia
     healthcheck:
-      test: wget -O - https://satosa-nginx/Saml2IDP/metadata --no-check-certificate || exit 1
+      test: ["CMD", "sh", "pyeudiw-healthcheck.sh"]
       interval: 30s
       retries: 10
       start_period: 30s
-      timeout: 30s
+      timeout: 10s
 
   satosa-nginx:
     image: nginx:alpine
