Fix callback endpoint for refresh and access token. Add first struct for extend_session_endpoint

--- a/iam-proxy-italia-project/conf/backends/cieoidc_backend.yaml
+++ b/iam-proxy-italia-project/conf/backends/cieoidc_backend.yaml
@@ -200,3 +200,13 @@ config:
           fiscal_number:
             - https://attributes.eid.gov.it/fiscal_number
             - fiscal_number
+    extends_session_endpoint:
+      module: backends.cieoidc.endpoints.extend_session_endpoint
+      class: ExtendSessionHandler
+      routes:
+        - /extend_session
+      config:
+        entity_type: openid_relying_party
+        entity_configuration_exp: 2800
+        default_sig_alg: RS256
+        metadata: *metadata
