--- a/iam-proxy-italia-project/conf/microservices/target_based_routing.yaml
+++ b/iam-proxy-italia-project/conf/microservices/target_based_routing.yaml
@@ -27,4 +27,6 @@ config:
     "https://idserver.servizicie.interno.gov.it/idp/profile/SAML2/POST/SSO": "cieSaml2"
     #IT Wallet
     "wallet": "OpenID4VP"
-    "cieOidc": "cieOidcRp"
+    "http://cie-provider.org:8002/oidc/op/": "CieOidcRp"
+    "http://ipzs-example-col-provider.org:8002/oidc/op/": "CieOidcRp"
+    "http://ipzs-example-prod-provider.org:8002/oidc/op/": "CieOidcRp"
