fix: *-docker-compose.sh, handle multiple instruction in run and remove image in stop

--- a/Docker-compose/docker-compose.yml
+++ b/Docker-compose/docker-compose.yml
@@ -24,6 +24,7 @@ services:
   wwwallet-server:
     profiles:
       - wwwallet
+    image: wwwallet-server:latest
     build:
       context: ./wwwallet/wallet-backend-server
       dockerfile: Dockerfile
@@ -38,6 +39,7 @@ services:
   wwwallet-frontend:
     profiles:
       - wwwallet
+    image: wwwallet-frontend:latest
     build:
       context: ./wwwallet/wallet-frontend
       dockerfile: Dockerfile
