--- a/iam-proxy-italia-project/wwwallet/configs/.env.prod
+++ b/iam-proxy-italia-project/wwwallet/configs/.env.prod
@@ -1,7 +1,7 @@
 HOST='0.0.0.0'
 PORT=3000
 VITE_WS_URL=wss://${SATOSA_HOSTNAME}/wwwallet-server/
-VITE_WALLET_BACKEND_URL=https://${SATOSA_HOSTNAME}/wwwallet-server/
+VITE_WALLET_BACKEND_URL=https://${SATOSA_HOSTNAME}/wwwallet-server
 VITE_LOGIN_WITH_PASSWORD=true
 VITE_FIREBASE_ENABLED=false
 VITE_FIREBASE_VAPIDKEY=<Your_Vapid_Key>
